Downgrade to JDK1.8